--- a/client/style.css
+++ b/client/style.css
@@ -13,7 +13,6 @@
 .chat_block {
     border: 1px grey solid;
     width: 90%;
-    min-height: 400px;
     border-radius: 10px;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
@@ -37,6 +36,8 @@
     padding: 15px;
     display: flex;
     flex-direction: column;
+    height: 400px;
+    overflow: auto;
 }
 
 .my-message, .other-message {
@@ -123,4 +124,8 @@ form {
 
 .time {
     font-size: 12px;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
