--- a/client/style.css
+++ b/client/style.css
@@ -54,14 +54,14 @@ body {
 }
 
 .my-message_block {
-    align-self: flex-end;
+    justify-content: flex-end;
 }
 
 .my-message_block,.other-message_block {
     margin: 5px;
     color: white;
     word-break: break-all;
-    width: 80%;
+    display: flex;
 }
 
 .online {
@@ -69,9 +69,11 @@ body {
     margin: auto;
     text-align: center;
     padding: 20px 0;
-    font-family: 'Rowdies', cursive;
-    font-size: 30px;
+    font-family: Rockwell, cursive;
+    letter-spacing: 2px;
+    font-size: 32px;
     font-weight: 600;
+    color: midnightblue;
 }
 
 .chat_wrapper {
@@ -95,7 +97,7 @@ form {
     padding: 15px;
     border-radius: 15px;
     border: 0;
-    box-shadow: 0px 0px 4px 2px rgb(0 0 0 / 6%);
+    box-shadow: 0px 0px 5px 3px rgb(0 0 0 / 10%);
     outline: none;
     width: 85%;
     flex: 1;
