--- a/client/style.css
+++ b/client/style.css
@@ -69,7 +69,7 @@ body {
     margin: auto;
     text-align: center;
     padding: 20px 0;
-    font-family: Rockwell, cursive;
+    font-family: 'Rowdies', cursive;
     letter-spacing: 2px;
     font-size: 32px;
     font-weight: 600;
